[feature/implement-api-calls] Implemented API Calls, added missing controllers and fixed types
